--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <h1>CALCULATOR</h1>
   <div class="calculator">
     <div class="screen">
-      <div class="upper">10 + 10 =</div>
-      <div class="lower">20</div>
+      <div class="upper"></div>
+      <div class="lower">0</div>
     </div>
     <button class="btn" id="clear">CLEAR</button><button class="btn" id="delete">DEL</button><button class="btn operator" data-op="^">^</button>
     <button class="btn number" data-number="7">7</button><button class="btn number" data-number="8">8</button><button class="btn number" data-number="9">9</button><button class="btn operator" data-op="÷">÷</button>
